--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <div class="hero-content container">
-            <img src="your-profile-picture.jpg" alt="プロフィール写真" class="profile-picture">
+            <img src="your-profile-picture.JPG" alt="プロフィール写真" class="profile-picture">
             <h1>LE SI NAM</h1>
             <p class="tagline">建築&土木技術者・構造解析の専門家 | サイバーセキュリティ分野への転身を目指しています</p>
             <a href="#about" class="btn primary-btn">詳細を見る</a>
@@ -292,3 +292,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
