--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </nav>
         <div class="hero-content container">
-            <!-- <img src="your-profile-picture.JPG" alt="プロフィール写真" class="profile-picture"> -->
+            <img src="your-profile-picture.JPG" alt="プロフィール写真" class="profile-picture">
             <h1>LE SI NAM</h1>
             <p class="tagline">建築&土木技術者・構造解析の専門家 | サイバーセキュリティ分野への転身を目指しています</p>
             <a href="#about" class="btn primary-btn">詳細を見る</a>
@@ -170,7 +170,26 @@
                 </div>
             </div>
         </section>
-        
+        <section id="projects" class="section-padding">
+            <div class="container">
+                <h2>プロジェクト実績</h2>
+                
+                <div class="updating-notice-card">
+                    <i class="fas fa-tools notice-icon"></i>
+                    <h3>現在、プロジェクト情報を更新中です</h3>
+                    <p>
+                        現在、ウェブセキュリティ分野への転身に伴い、最新のセキュリティ関連プロジェクトやラーニングパスの詳細をまとめている最中です。
+                    </p>
+                    <p class="sub-text">
+                        **近日中に、Webアプリケーションセキュリティに関する実績を公開予定です。**<br>
+                        しばらくお待ちください。
+                    </p>
+                    <a href="#goals" class="btn secondary-btn" style="margin-top: 20px;">
+                        <i class="fas fa-bullseye"></i> 目標を確認する
+                    </a>
+                </div>
+                </div>
+        </section>
         <!-- <section id="projects" class="section-padding">
             <div class="container">
                 <h2>プロジェクト実績</h2>
@@ -292,5 +311,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
