Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                         </div>
                         <div class="skill-item certified-skill">
                             <i class="fas fa-laptop-code skill-icon"></i>
-                            <h4>WEBクリエイター能力試験</h4>
+                            <h4>WEBクリエイター能力認定 エキスパート</h4>
                             <p>ウェブサイト制作のスキルを証明。</p>
                         </div>
                         <div class="skill-item certified-skill">
                             <i class="fas fa-palette skill-icon"></i>
-                            <h4>WEBデザイナー技能検定 3級</h4>
+                            <h4>3級ウェブデザイン技能検定</h4>
                             <p>ウェブデザインの基本知識を証明。</p>
                         </div>
                     </div>
@@ -304,10 +304,11 @@
 
     <!-- <footer>
         <div class="container">
-            <p>&copy; 2023 LE SI NAM. All rights reserved.</p>
+            <p>&copy; 2025 LE SI NAM. All rights reserved.</p>
         </div>
     </footer> -->
 
     <script src="script.js"></script>
 </body>
 </html>
+
