--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <i class="fas fa-bars"></i>
             </div>
         </nav>
-        <div class="hero-content container">
+        <div class="hero-content container" id="home">
             <img src="your-profile-picture.JPG" alt="プロフィール写真" class="profile-picture">
             <h1>LE SI NAM</h1>
             <p class="tagline">建築&amp;土木技術者・構造解析の専門家 | サイバーセキュリティ分野への転身を目指しています</p>
@@ -231,5 +231,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
