--- a/index.html
+++ b/index.html
@@ -123,56 +123,38 @@
                 </div>
             </div>
         </section>
-
-        <section id="philosophy" class="section-padding" style="background-color: var(--bg-color);">
+        <section id="philosophy" class="section-padding">
             <div class="container">
-                <h2>エンジニアリング思考の転換<br><span style="font-size: 0.6em; color: var(--primary-color);">From Structural Integrity to System Integrity</span></h2>
-                <p style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">
-                    7年間の構造設計経験で培った「リスク管理」と「堅牢性へのこだわり」は、サイバーセキュリティにおいても私の最大の武器です。
-                </p>
-
+                <h2>エンジニアリング思考の転換<br><span class="subtitle">From Structural Integrity to System Integrity</span></h2>
+                
                 <div class="comparison-container">
-                    <div class="comparison-card">
-                        <div class="comp-header construction">
+                    <div class="comparison-card construction-card">
+                        <div class="comp-header">
                             <i class="fas fa-hard-hat"></i> 構造設計 (Construction)
                         </div>
                         <div class="comp-body">
-                            <div class="comp-item">
-                                <strong>荷重計算と耐震設計</strong>
-                                <p>想定外の地震や負荷に耐える計算</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-arrow-right"></i></div>
-                            <div class="comp-item">
-                                <strong>品質管理と法令遵守</strong>
-                                <p>建築基準法に基づいた厳格なチェック</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-arrow-right"></i></div>
-                            <div class="comp-item">
-                                <strong>現場事故の予防 (安全管理)</strong>
-                                <p>KY(危険予知)活動による事故ゼロ化</p>
-                            </div>
+                            <ul>
+                                <li><i class="fas fa-caret-right"></i> 荷重計算と耐震設計</li>
+                                <li><i class="fas fa-caret-right"></i> 品質管理と法令遵守</li>
+                                <li><i class="fas fa-caret-right"></i> 現場事故の予防 (安全管理)</li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div class="comparison-card">
-                        <div class="comp-header cyber">
+                    <div class="transfer-icon">
+                        <i class="fas fa-exchange-alt"></i>
+                    </div>
+
+                    <div class="comparison-card cyber-card">
+                        <div class="comp-header">
                             <i class="fas fa-shield-alt"></i> サイバーセキュリティ
                         </div>
                         <div class="comp-body">
-                            <div class="comp-item">
-                                <strong>負荷分散と可用性確保 (CIA)</strong>
-                                <p>DDoS攻撃やトラフィック急増への対策</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-check"></i></div>
-                            <div class="comp-item">
-                                <strong>コンプライアンス (GRC)</strong>
-                                <p>ISO27001やセキュリティポリシーの遵守</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-check"></i></div>
-                            <div class="comp-item">
-                                <strong>インシデント予防と対応</strong>
-                                <p>脆弱性診断とSOCによる早期検知</p>
-                            </div>
+                            <ul>
+                                <li><i class="fas fa-check"></i> 負荷分散と可用性確保 (CIA)</li>
+                                <li><i class="fas fa-check"></i> コンプライアンス (GRC)</li>
+                                <li><i class="fas fa-check"></i> インシデント予防と対応</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -251,3 +233,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
