--- a/index.html
+++ b/index.html
@@ -107,72 +107,55 @@
                         <div class="skill-item">
                             <i class="fas fa-network-wired skill-icon security-icon"></i>
                             <h4>ネットワークセキュリティ</h4>
-                            <p>TCP/IP、DNS、Wiresharkによるパケット解析。</p>
+                            <p>TCP/IP、DNSによるパケット解析。</p>
                         </div>
                         <div class="skill-item">
                             <i class="fas fa-bug skill-icon security-icon"></i>
                             <h4>脆弱性診断の基礎</h4>
-                            <p>OWASP Top 10、SQLインジェクション/XSSの攻撃手法と防御。</p>
+                            <p>SQLインジェクション/XSSの攻撃手法と防御。</p>
                         </div>
                          <div class="skill-item">
                             <i class="fas fa-file-contract skill-icon security-icon"></i>
                             <h4>ログ分析 & SIEM</h4>
-                            <p>ログの正規化と脅威検知 (Suricata) の概念理解。</p>
+                            <p>ログの正規化と脅威検知の概念理解。</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="philosophy" class="section-padding" style="background-color: var(--bg-color);">
+        <section id="philosophy" class="section-padding">
             <div class="container">
-                <h2>エンジニアリング思考の転換<br><span style="font-size: 0.6em; color: var(--primary-color);">From Structural Integrity to System Integrity</span></h2>
-                <p style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">
-                    7年間の構造設計経験で培った「リスク管理」と「堅牢性へのこだわり」は、サイバーセキュリティにおいても私の最大の武器です。
-                </p>
-
+                <h2>エンジニアリング思考の転換<br><span class="subtitle">From Structural Integrity to System Integrity</span></h2>
+                
                 <div class="comparison-container">
-                    <div class="comparison-card">
-                        <div class="comp-header construction">
+                    <div class="comparison-card construction-card">
+                        <div class="comp-header">
                             <i class="fas fa-hard-hat"></i> 構造設計 (Construction)
                         </div>
                         <div class="comp-body">
-                            <div class="comp-item">
-                                <strong>荷重計算と耐震設計</strong>
-                                <p>想定外の地震や負荷に耐える計算</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-arrow-right"></i></div>
-                            <div class="comp-item">
-                                <strong>品質管理と法令遵守</strong>
-                                <p>建築基準法に基づいた厳格なチェック</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-arrow-right"></i></div>
-                            <div class="comp-item">
-                                <strong>現場事故の予防 (安全管理)</strong>
-                                <p>KY(危険予知)活動による事故ゼロ化</p>
-                            </div>
+                            <ul>
+                                <li><i class="fas fa-caret-right"></i> 荷重計算と耐震設計</li>
+                                <li><i class="fas fa-caret-right"></i> 品質管理と法令遵守</li>
+                                <li><i class="fas fa-caret-right"></i> 現場事故の予防 (安全管理)</li>
+                            </ul>
                         </div>
                     </div>
 
-                    <div class="comparison-card">
-                        <div class="comp-header cyber">
+                    <div class="transfer-icon">
+                        <i class="fas fa-exchange-alt"></i>
+                    </div>
+
+                    <div class="comparison-card cyber-card">
+                        <div class="comp-header">
                             <i class="fas fa-shield-alt"></i> サイバーセキュリティ
                         </div>
                         <div class="comp-body">
-                            <div class="comp-item">
-                                <strong>負荷分散と可用性確保 (CIA)</strong>
-                                <p>DDoS攻撃やトラフィック急増への対策</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-check"></i></div>
-                            <div class="comp-item">
-                                <strong>コンプライアンス (GRC)</strong>
-                                <p>ISO27001やセキュリティポリシーの遵守</p>
-                            </div>
-                            <div class="comp-arrow"><i class="fas fa-check"></i></div>
-                            <div class="comp-item">
-                                <strong>インシデント予防と対応</strong>
-                                <p>脆弱性診断とSOCによる早期検知</p>
-                            </div>
+                            <ul>
+                                <li><i class="fas fa-check"></i> 負荷分散と可用性確保 (CIA)</li>
+                                <li><i class="fas fa-check"></i> コンプライアンス (GRC)</li>
+                                <li><i class="fas fa-check"></i> インシデント予防と対応</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -193,7 +176,7 @@
                     </p>
                     
                     <div class="current-focus-list">
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> 仮想環境での攻撃・防御演習 (Kali Linux / Metasploitable)</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> 仮想環境での攻撃・防御演習 (Kali Linux)</div>
                         <div class="focus-item"><i class="fas fa-check-circle"></i> SIEM (Suricata) を用いたログ分析と正規化の実践</div>
                         <div class="focus-item"><i class="fas fa-check-circle"></i> Web脆弱性 (XSS, SQLi) の再現と修正コードの作成</div>
                     </div>
@@ -239,11 +222,10 @@
         <section id="contact" class="section-padding bg-light">
             <div class="container">
                 <h2>お問い合わせ</h2>
-                <p>面接の機会や、詳細な経歴についてのご質問など、お気軽にご連絡ください。</p>
                 <div class="contact-info">
-                    <p><i class="fas fa-envelope contact-icon"></i> Email: <a href="mailto:lenam.tohyoh@gmail.com">lenam.tohyoh@gmail.com</a></p>
-                    <p><i class="fab fa-linkedin contact-icon"></i> LinkedIn: <a href="https://www.linkedin.com/in/si-nam-le-066b61310/" target="_blank" rel="noopener noreferrer">LE SI NAM</a></p>
-                    <p><i class="fab fa-github contact-icon"></i> GitHub: <a href="https://github.com/lesinam" target="_blank" rel="noopener noreferrer">lesinam</a></p>
+                    <a href="mailto:lenam.tohyoh@gmail.com" class="contact-btn"><i class="fas fa-envelope"></i> Email</a>
+                    <a href="https://www.linkedin.com/in/si-nam-le-066b61310/" target="_blank" class="contact-btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="https://github.com/lesinam" target="_blank" class="contact-btn"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
         </section>
