--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     
                     <div class="current-focus-list">
                         <div class="focus-item"><i class="fas fa-check-circle"></i> 仮想環境での攻撃・防御演習 (Kali Linux)</div>
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> SIEM (Suricata) を用いたログ分析と正規化の実践</div>
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> Web脆弱性 (XSS, SQLi) の再現と修正コードの作成</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> SIEMを用いたログ分析と正規化の実践</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> Web脆弱性 (XSS, SQL) の再現と修正コードの作成</div>
                     </div>
 
                     <p class="updating-sub-text">
