--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h2>自己紹介</h2>
                 <div class="about-content">
-                    <p>初めまして、<strong>LE SI NAM（レ・シー・ナム）</strong>と申します。私は日本で7年以上にわたり、建設コンサルタント業界で<strong>設計主任</strong>として従事し、チームマネジメントや複雑な構造計算を担当してまいりました。</p>
+                    <p>初めまして、<strong>LE SI NAM（レ・シ・ナム）</strong>と申します。私は日本で7年以上にわたり、建設コンサルタント業界で<strong>設計主任</strong>として従事し、チームマネジメントや複雑な構造計算を担当してまいりました。</p>
                     
                     <p>現在、私はそのキャリアを<strong>サイバーセキュリティ</strong>という新たな領域へと転換させています。構造エンジニアとして培った論理的思考は、そのままセキュリティ分野にも応用できると確信しています。</p>
                     
