Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     
                     <p style="margin-top: 15px;">
                         <a href="https://drive.google.com/file/d/1f8CVzMSKP436A1528-vpYhQznc4nehIi/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn secondary-btn resume-btn">
-                            <i class="fas fa-file-pdf"></i> 履歴書・職務経歴書 (PDF)
+                            <i class="fas fa-file-pdf"></i> 職務経歴書 (PDF)
                         </a>
                     </p>
                 </div>
@@ -233,4 +233,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
