Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
                 </div>
 
                 <div class="skills-category">
+                    <h3>Google認定資格 & AI</h3>
+                    <div class="skill-list">
+                        <div class="skill-item certified-skill">
+                            <i class="fab fa-google skill-icon"></i>
+                            <h4>Google Cybersecurity</h4>
+                            <p>Linux, SQL, Python, SIEM, IDSを活用した実践的なセキュリティ対策認定。</p>
+                        </div>
+                        <div class="skill-item certified-skill">
+                            <i class="fas fa-robot skill-icon"></i>
+                            <h4>Google AI Essentials</h4>
+                            <p>生成AIを活用した業務効率化と問題解決スキルの認定。</p>
+                        </div>
+                        <div class="skill-item certified-skill">
+                            <i class="fas fa-comment-dots skill-icon"></i>
+                            <h4>Google Prompting Essentials</h4>
+                            <p>効果的なプロンプト設計によるAI活用テクニック。</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skills-category">
                     <h3>サイバーセキュリティ知識（学習中）</h3>
                     <div class="skill-list">
                         <div class="skill-item">
@@ -172,13 +193,13 @@
                     </div>
                     <h3>現在、実践・研究中です</h3>
                     <p class="updating-main-text">
-                        より質の高いポートフォリオを公開するため、現在ホームラボ環境にて以下のテーマを集中的に研究・実践しています。
+                        Google Cybersecurity認定で得た知識をベースに、ホームラボ環境にて以下のテーマを実践しています。
                     </p>
                     
                     <div class="current-focus-list">
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> 仮想環境での攻撃・防御演習 (Kali Linux)</div>
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> SIEMを用いたログ分析と正規化の実践</div>
-                        <div class="focus-item"><i class="fas fa-check-circle"></i> Web脆弱性 (XSS, SQL) の再現と修正コードの作成</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> Pythonによるログ解析の自動化スクリプト作成</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> SIEM (Chronicle/Splunk) を用いた脅威検知シミュレーション</div>
+                        <div class="focus-item"><i class="fas fa-check-circle"></i> 仮想環境でのインシデントレスポンス演習</div>
                     </div>
 
                     <p class="updating-sub-text">
@@ -224,7 +245,7 @@
                 <h2>お問い合わせ</h2>
                 <div class="contact-info">
                     <a href="mailto:lenam.tohyoh@gmail.com" class="contact-btn"><i class="fas fa-envelope"></i> Email</a>
-                    <a href="https://www.linkedin.com/in/si-nam-le" target="_blank" class="contact-btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/si-nam-le-066b61310/" target="_blank" class="contact-btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
                     <a href="https://github.com/lesinam" target="_blank" class="contact-btn"><i class="fab fa-github"></i> GitHub</a>
                 </div>
             </div>
@@ -233,5 +254,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
