Re-add index.html with full content

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <p>この目標に向け、2024年末からの1年足らずで<strong>IT関連の資格を4つ取得</strong>（基本情報、SG等）しました。持ち前の「学習速度」と「粘り強さ」で、貴社のセキュリティ対策に貢献いたします。</p>
                     
                     <p style="margin-top: 15px;">
-                        <a href="https://drive.google.com/file/d/1f8CVzMSKP436A1528-vpYhQznc4nehIi/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn secondary-btn resume-btn">
-                            <i class="fas fa-file-pdf"></i> 職務経歴書 (PDF)
+                        <a href="https://drive.google.com/file/d/1gS7-_58mnER8DphFLhUyn4o2N_2KgmU2/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn secondary-btn resume-btn">
+                            <i class="fas fa-file-pdf"></i> 履歴書・職務経歴書 (PDF)
                         </a>
                     </p>
                 </div>
@@ -254,3 +254,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
