Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </div>
                         <div class="skill-item certified-skill" style="border-color: #ea4335; background-color: rgba(234, 67, 53, 0.05);">
                             <i class="fas fa-comment-dots skill-icon" style="color: #ea4335;"></i>
-                            <h4>Prompting Essentials</h4>
+                            <h4>Google Prompting Essentials</h4>
                             <p>効果的なプロンプト設計によるAI活用テクニック。</p>
                         </div>
                     </div>
@@ -261,3 +261,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
